Update collaborative work rule

--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
                             <li>One pay-out per vulnerability.</li>
                             <li>Full disclosure required.</li>
                             <li>No leaving known attack vectors behind after the attack.</li>
-                            <li>No attacks during pair-programming.</li>
+                            <li>No attacks when I explicitly allow you to use my computer for any purpose.</li>
                         </ol>
 
                         <p>Also don't violate my privacy, steal my bitcoins or make GPG signatures in my name. Follow common sense.</p>
